--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,14 @@ div {
 border-radius: 5px;
 }
 
+.contentbody {
+  position: relative;
+  width: 100%;
+  margin-top: 5px;
+  background-color: #f2f2f2;
+  margin-bottom: 5px;
+ }
+
 #name {
   margin-left: 5px;
   padding-top: 10px;
