--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ header {
   position: relative;
   width: 100%;
   height: 75px;
-  margin-top: -20px;
+  margin-top: 8px;
   background-color: #F5F5F5;
   margin-bottom: 8px;
  
@@ -33,12 +33,12 @@ border-radius: 5px;
   padding-top: 2px;
   font-size: 15px;
   font-family: Arial, sans-serif;
-  color: #000000;
+  color: #0099ff;
 }
 
 #email:hover{
 text-decoration: underline;
-color: #0099ff;
+color: #404040;
 }
 
 a:hover{
@@ -50,23 +50,23 @@ color: #0099ff;
 p {
 font-weight: normal;
 font-family: Arial, sans-serif;
-font-seze: 15px;
+font-size: 15px;
 }
 
 h1 {
 font-weight: bold;
 font-family: Arial, sans-serif;
-font-seze: 19px;
+font-size: 19px;
 }
 
 h2 {
 font-weight: bold;
 font-family: Arial, sans-serif;
-font-seze: 16px;
+font-size: 16px;
 }
 
 h3 {
 font-weight: bold;
 font-family: Arial, sans-serif;
-font-seze: 15px;
+font-size: 15px;
 }
