--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,15 @@
 *{
 margin: 0px;
-padding: 0px 0px 0px 4px;
+padding: 0px 0px 0px 0px;
 color: #262626
 }
 
+body {
+  padding-left: 5px;
+  width:66%;
+  min-width:600px;
+  
+}
 
 header {
   position: relative;
@@ -45,13 +51,17 @@ margin-left:18px;
  }
 
 a:{
+text-decoration:none;
 font-weight:bold;
 font-family: Arial, sans-serif;
 font-size: 15px;
+margin: 0px;
+padding: 0px 0px 0px 0px;
 color: #262626;
 }
 
 a:hover{
+text-decoration:none;
 font-weight:bold;
 text-decoration: underline;
 font-family: Arial, sans-serif;
@@ -59,6 +69,17 @@ font-size: 15px;
 margin: 0px;
 padding: 0px 0px 0px 0px;
 color: #0099ff;
+}
+
+a:visited{
+text-decoration:none;
+font-weight:bold;
+text-decoration: underline;
+font-family: Arial, sans-serif;
+font-size: 15px;
+margin: 0px;
+padding: 0px 0px 0px 0px;
+color: #008B8B;
 }
 
 p {
