--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,7 @@ color: #262626
 body {
   padding-left: 5px;
   width:66%;
-  min-width:768px;
-  
+  min-width:600px;
 }
 
 header {
@@ -21,7 +20,7 @@ header {
 }
 
 
-p name {
+.name {
 font-weight: bold;
 font-family: Arial, sans-serif;
 font-size: 30px;
@@ -46,8 +45,10 @@ margin-left:18px;
  }
 
  #contact {
+  font-family: Arial, sans-serif;
   padding: 0px 0px 0px 0px;
   color: #262626
+  text-decoration:none;
  }
 
 a:{
@@ -81,6 +82,7 @@ margin: 0px;
 padding: 0px 0px 0px 0px;
 color: #008B8B;
 }
+
 
 p {
 font-weight: normal;
